--- a/website/static/gont/index.html
+++ b/website/static/gont/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="go-import" content="cunicu.li/gont/v2 git https://github.com/cunicu/gont">
+    <meta name="go-import" content="cunicu.li/gont git https://github.com/cunicu/gont">
     <meta http-equiv="Refresh" content="0; url=https://github.com/cunicu/gont" />
   </head>
   <body>
